--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,11 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+p {
+  font-size: 40px;
+  font-weight: bold;
+}
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
